Bug 45695 - Wrong appearance of second char on the first word of each line (Mongolian shaping)
Summary: Wrong appearance of second char on the first word of each line (Mongolian sha...
Status: RESOLVED FIXED
Alias: None
Product: HarfBuzz
Classification: Unclassified
Component: src (show other bugs)
Version: unspecified
Hardware: Other All
: medium normal
Assignee: Behdad Esfahbod
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-02-06 04:53 UTC by nagi
Modified: 2012-05-27 19:34 UTC (History)
2 users (show)

See Also:
i915 platform:
i915 features:


Attachments
screenshot of harfbuzz test (4.72 KB, image/png)
2012-02-06 04:53 UTC, nagi
Details
five fonts for test (460.17 KB, application/x-compressed-tar)
2012-04-12 23:22 UTC, nagi
Details
test text (301 bytes, text/plain)
2012-04-12 23:25 UTC, nagi
Details

Description nagi 2012-02-06 04:53:26 UTC
Created attachment 56663 [details]
screenshot of harfbuzz test

in screenshot, there are 3 lines of 3 words. Every second char of the first word is wrong displayed on each line.

reproduce steps: 
used monbaiti.ttf font on linux
current harfbuzz repo
pango with pango-ng-external branch

> hb-view --output-file=test.png --text-file=test.txt --font-file=fonts/monbaiti.ttf

test.txt file content:
ᠬᠦᠮᠦᠨ ᠮᠤᠩᠭᠣᠯ ᠪᠢᠴᠢᠭ᠌
ᠪᠢᠴᠢᠭ᠌ ᠬᠦᠮᠦᠨ ᠮᠤᠩᠭᠣᠯ
ᠮᠤᠩᠭᠣᠯ ᠪᠢᠴᠢᠭ᠌ ᠬᠦᠮᠦᠨ
Comment 1 nagi 2012-02-13 02:45:52 UTC
Behdad: I didn't want to be pushy. I hope that this bug is fixed and included in this https://bugzilla.mozilla.org/show_bug.cgi?id=695857 bug fix at right time :)
Comment 2 Behdad Esfahbod 2012-04-12 07:08:35 UTC
Ok, I fixed that bug.  But I'm getting different results compared to Uniscribe for the last glyph of the first line.  This is with the Mongolian Baiti font from Windows.  Closing the bug for now, but would appreciate if you can test and report.
Comment 3 nagi 2012-04-12 23:22:42 UTC
Created attachment 59892 [details]
five fonts for test

Here are 5 fonts you can use for test.
MongolianScript.otf - developed in Mongolia
mngl*.ttf - developed in Japan
monbaiti.ttf - developed at Microsoft ( chinese university ?)
Comment 4 nagi 2012-04-12 23:25:14 UTC
Created attachment 59893 [details]
test text

small famous poem for the test text
Comment 5 nagi 2012-04-12 23:27:53 UTC
(In reply to comment #2)
> Ok, I fixed that bug.  But I'm getting different results compared to Uniscribe
> for the last glyph of the first line.  This is with the Mongolian Baiti font
> from Windows.  Closing the bug for now, but would appreciate if you can test
> and report.

Thank you Behdad!

I've tested and it looks great!
Comment 6 Behdad Esfahbod 2012-04-14 09:47:52 UTC
Please don't attach copyrighted material on bugzilla unless you have permission to redistribute them.
Comment 7 nagi 2012-04-17 01:35:34 UTC
(In reply to comment #6)
> Please don't attach copyrighted material on bugzilla unless you have permission
> to redistribute them.

I'm sorry Behdad, that will not happen again.

Here is the download link for mngl*.ttf fonts:
http://www.mongolfont.com/en/index.html

MongolianScript.otf download link:
http://openmn.org/index.php?nav=4&pageId=6&op=get_file&item=19
Comment 8 nagi 2012-04-17 01:40:38 UTC
Comment on attachment 59892 [details]
five fonts for test

obsolete. Use the download links in Comment 7
Comment 9 Behdad Esfahbod 2012-04-17 18:48:17 UTC
No worries.  Thanks.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.